-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.2.0
-
Linux
-
9b621f38619d8d9b3e61723f4cd4e821f909697a (qtbase stable, 13.12.2013, 5.2.1)
FAIL! : tst_qdeclarativeapplication::layoutDirection() Compared values are not the same Loc: [tst_qdeclarativeapplication.cpp(110)]
in
// mirrored QApplication::setLayoutDirection(Qt::RightToLeft); QCOMPARE(Qt::LayoutDirection(item->property("layoutDirection").toInt()), Qt::RightToLeft);
THat is, the item is no longer noticed.
- is required for
-
QTBUG-35562 Issues to be fixed in Qt 5.2.1
-
- Closed
-
- resulted from
-
QTBUG-21573 Adapt qdeclarativeapplication autotest after refactor merge
-
- Closed
-
| For Gerrit Dashboard: QTBUG-35589 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 73900,3 | Partially revert "Move notification of layout change up from QApplication to QGuiApplication." | stable | qt/qtbase | Status: MERGED | +2 | 0 |