Partially revert "Move notification of layout change up from QApplication to QGuiApplication."

We can't rely on QGuiApplication::topLevelWindows containing top level QWidgets,
because they only exist as actual windows once QWidgetPrivate::create_sys is
called. Thus, make sure to send notifications to all top level widgets, if a
QApplication is being used.

This reverts commit f82ed5b3e30282bb8dc1da321a0d04ad4d463e59.

Task-number: QTBUG-35589
Change-Id: Iac517089af1c22f20094ba6e185d5ed44ebe3d6f
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: 9b621f38619d8d9b3e61723f4cd4e821f909697a https://github.com/qt/qtbase/commit/9b621f38619d8d9b3e61723f4cd4e821f909697a