src/widgets/kernel/qapplication.cpp
@@ -47,6 +47,7 @@ DECL|function|keypadNavigationEnabled
 DECL|function|navigationMode
 DECL|function|notify
 DECL|function|notifyDragStarted
+DECL|function|notifyLayoutDirectionChange
 DECL|function|notifyThemeChanged
 DECL|function|notify_helper
 DECL|function|palette
